Fix Data Saver download crash

BUG=738161

Review-Url: https://codereview.chromium.org/2965703003
Cr-Commit-Position: refs/heads/master@{#483871}

Former-commit-id: 05c51a354dd12d26b49ad88960ab249002fa636f